--- a/client/experiences/experiences.view.ng.html
+++ b/client/experiences/experiences.view.ng.html
@@ -1,1 +1,6 @@
-<div class="experiences container">This is the {{ viewName }} view</div>
+<div id="experiences" class="experiences container">
+	<h2>{{ viewName }}</h2>
+	<p class="lead">
+		“ Experience without theor	y is blind, but theory without experience is mere intellectual play. ”<br>- Immanuel Kant
+	</p>		
+</div>
