--- a/client/index.html
+++ b/client/index.html
@@ -1,9 +1,10 @@
 <head>
+  <script src="/bower_components/angular-animate/angular-animate.js"></script>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <base href="/">
 </head>
 <body>
-  <toolbar></toolbar>
-  <div class="container" ui-view=""></div>
+  <toolbar></toolbar>  
+  <div class="container" ui-view=""></div>  
   <footer></footer>
 </body>
