Changed about me paragraph

--- a/client/main/main.view.ng.html
+++ b/client/main/main.view.ng.html
@@ -24,7 +24,7 @@
     <div class="col-md-12">
       <h3>About me</h3>
       <p>
-        I am an allround Web UI developer. I am a programmer with good knowledge of front-end techniques. I love order and keeping my code clean. I also love spending time optimizing web apps and trying new things. I think that teamwork, promotes good practices and allows all participants to learn quickly about what each person knows better. My goals are to grow as a person and professional to be able to plan, analyze, design, implement and manage information systems with a strong background in knowledge engineering that allows me to design and implement solutions in organizations.
+        I'm an all-round UI developer and a programmer with vast knowledge of front-end techniques. I believe that attention to detail is imperative in order to keep my code clean. Spending time optimizing web apps allows me to create as well as to try new and different things. I am a firm believer that team work brings about success and allows all participants to get the best out of themselves. Finally, my goal is to grow as a person and as a professional to be able to plan , analyze, and manage information providing organizations with   practical and accurate solutions.
       </p>
     </div>
   </div>
