--- a/client/main/main.view.ng.html
+++ b/client/main/main.view.ng.html
@@ -3,28 +3,31 @@
   <p class="lead">I'm a creative Web UI Developer</p>
 
   <hr>
+  
   <div class="row">
     <div class="col-md-6 text-center">
-      <img class="img-circle" src="gonzalozunino.png" alt="I'm Gonzalo Zunino" width="250" height="250">
+      <!-- <img class="img-circle" src="gonzalozunino.png" alt="I'm Gonzalo Zunino" width="250" height="250"> -->
       <!-- <p> Insert Pic Here!</p>-->
     </div>
       
     <div class="col-md-6">
       <h3>Details</h3>
       <p>
-        <strong>Name:</strong><br>
-        Gonzalo Zunino<br>
-        <strong>Age:</strong><br>
-        28 years<br>
-        <strong>Location:</strong><br>
-        Córdoba (capital), Argentina
+      <strong>Name:</strong><br>
+      {{resume.profile.first_name}} {{resume.profile.last_name}}<br>
+      <strong>Date of birth:</strong><br>
+      {{resume.profile.date_of_birth}}<br>
+      <strong>Age:</strong><br>
+      {{getAge(resume.profile.date_of_birth)}}<br>
+      <strong>Location:</strong><br>
+      {{resume.profile.current_location.city}}, {{resume.profile.current_location.country}}
       </p>
-    </div>  
+    </div>
     
     <div class="col-md-12">
       <h3>About me</h3>
       <p>
-        I'm an all-round UI developer and a programmer with vast knowledge of front-end techniques. I believe that attention to detail is imperative in order to keep my code clean. Spending time optimizing web apps allows me to create as well as to try new and different things. I am a firm believer that team work brings about success and allows all participants to get the best out of themselves. Finally, my goal is to grow as a person and as a professional to be able to plan , analyze, and manage information providing organizations with   practical and accurate solutions.
+        {{resume.profile.biography}}
       </p>
     </div>
   </div>
