Add animation.css and json data

--- a/client/contact/contact.view.ng.html
+++ b/client/contact/contact.view.ng.html
@@ -1,4 +1,4 @@
-<div id="contact" class="contact container">
+<div id="contact" class="contact container animated bounceInLeft">
 	<h2>{{ viewName }}</h2>	
 	<p class="lead">
 		“Only love interests me, and I am only in contact with things that revolve around love.”<br>- Marc Chagall
