--- a/client/experiences/experiences.view.ng.html
+++ b/client/experiences/experiences.view.ng.html
@@ -1,4 +1,4 @@
-<div id="experiences" class="experiences container">
+<div id="experiences" class="experiences container animated bounceInLeft">
 	<h2>{{ viewName }}</h2>
 	<p class="lead">
 		“Experience without theor	y is blind, but theory without experience is mere intellectual play.”<br>- Immanuel Kant
