--- a/client/main/main.view.ng.html
+++ b/client/main/main.view.ng.html
@@ -1,17 +1,16 @@
-<div id="profile">
+<div id="profile" class="profile animated bounceInLeft">
   <h2>Profile</h2>
   <p class="lead">I'm a creative Web UI Developer</p>
 
   <hr>
-  
+
   <div class="row">
     <div class="col-md-6 text-center">
       <!-- <img class="img-circle" src="gonzalozunino.png" alt="I'm Gonzalo Zunino" width="250" height="250"> -->
       <!-- <p> Insert Pic Here!</p>-->
     </div>
       
-    <div class="col-md-6">
-      <h3>Details</h3>
+    <div class="col-md-6">      
       <p>
       <strong>Name:</strong><br>
       {{resume.profile.first_name}} {{resume.profile.last_name}}<br>
@@ -28,7 +27,7 @@
       <h3>About me</h3>
       <p>
         {{resume.profile.biography}}
-      </p>
+      </p>      
     </div>
-  </div>
+  </div>  
 </div>
