--- a/client/abilities/abilities.view.ng.html
+++ b/client/abilities/abilities.view.ng.html
@@ -1,4 +1,4 @@
-<div id="abilities" class="abilities container">
+<div id="abilities" class="abilities container animated bounceInLeft">
 	<h2>{{ viewName }}</h2>	
 	<p class="lead">
 		“The greatness of a man is not in how much wealth he acquires, but in his integrity and his ability to affect those around him positively.”<br>- Bob Marley
