--- a/client/main/main.view.ng.html
+++ b/client/main/main.view.ng.html
@@ -18,7 +18,7 @@
         <strong>Phone:</strong><br>
         {{resume.contact_details.phone}}<br>
         <strong>Location:</strong><br>
-        {{resume.profile.current_location.state}}, {{resume.profile.current_location.city}}, {{resume.profile.current_location.country}}<br>
+        {{resume.profile.current_location.state}}, {{resume.profile.current_location.city}} - {{resume.profile.current_location.country}}<br>
       </p>
     </div>
        
