--- a/client/experiences/experiences.view.ng.html
+++ b/client/experiences/experiences.view.ng.html
@@ -1,8 +1,9 @@
 <div id="experiences" class="experiences container animated bounceInLeft">
 	<h2>{{ viewName }}</h2>
-	<p class="lead">
-		“Experience without theor	y is blind, but theory without experience is mere intellectual play.”<br>- Immanuel Kant
-	</p>
+	<blockquote>
+		<p>Experience without theory is blind, but theory without experience is mere intellectual play.</p>
+		<footer>Immanuel Kant</footer>
+	</blockquote>
 
 	<hr>
 </div>
