--- a/client/abilities/abilities.view.ng.html
+++ b/client/abilities/abilities.view.ng.html
@@ -1,7 +1,7 @@
 <div id="abilities" class="abilities container animated bounceInLeft">
-	<h2>{{ viewName }}</h2>	
-	<p class="lead">
-		“The greatness of a man is not in how much wealth he acquires, but in his integrity and his ability to affect those around him positively.”<br>- Bob Marley
-	</p>	
-	<hr>	
+	<h2>{{ viewName }}</h2>
+	<blockquote>
+		<p>The greatness of a man is not in how much wealth he acquires, but in his integrity and his ability to affect those around him positively.</p>
+		<footer>Bob Marley</footer>
+	</blockquote>
 </div>
