--- a/client/index.html
+++ b/client/index.html
@@ -5,5 +5,5 @@
 <body>
   <toolbar></toolbar>  
   <div class="container" ui-view=""></div>  
-  <footer></footer>
+  <footnote></footnote>
 </body>
