--- a/client/main/main.view.ng.html
+++ b/client/main/main.view.ng.html
@@ -6,25 +6,23 @@
 
   <div class="row">
     <div class="wrap col-xs-12 text-xs-center col-sm-5 text-sm-right">
-      <img class="img-circle" src="gonzalozunino.jpg" alt="I'm Gonzalo Zunino" width="200" height="200">
+      <img class="img-circle" src="gonzalozunino.png" alt="I'm Gonzalo Zunino" width="200" height="200">
     </div>
     
     <div class="col-xs-12 text-xs-center col-sm-7 text-sm-left">
       <p class="wrap">
-        <strong>Name:</strong><br>
+        <h4>Name:</h4>
         {{resume.profile.first_name}} {{resume.profile.middle_names}} {{resume.profile.last_name}}<br>
-        <strong>Age:</strong><br>
-        {{getAge(resume.profile.date_of_birth)}}<br>
-        <strong>Phone:</strong><br>
-        {{resume.contact_details.phone}}<br>
-        <strong>Location:</strong><br>
-        {{resume.profile.current_location.state}}, {{resume.profile.current_location.city}} - {{resume.profile.current_location.country}}<br>
+        <h4>Age:</h4>
+        {{getAge(resume.profile.date_of_birth)}}        
+        <h4>Location:</h4>
+        {{resume.profile.current_location.state}}, {{resume.profile.current_location.city}} - {{resume.profile.current_location.country}}
       </p>
     </div>
        
     <div class="col-xs-12 text-xs-center col-sm-12 text-sm-left">      
       <p class="wrap">
-        <strong>About me</strong><br>
+        <h4>About me</h4><br>
         {{resume.profile.biography}}
       </p>      
     </div>
