Contact and animations changes

--- a/client/main/main.view.ng.html
+++ b/client/main/main.view.ng.html
@@ -5,11 +5,11 @@
   <hr>
 
   <div class="row">
-    <div class="wrap col-xs-12 text-xs-center col-sm-5 text-sm-right">
+    <div class="wrap col-xs-12 text-xs-center col-md-5 text-md-right">
       <img class="img-circle" src="gonzalozunino.png" alt="I'm Gonzalo Zunino" width="200" height="200">
     </div>
     
-    <div class="col-xs-12 text-xs-center col-sm-7 text-sm-left">
+    <div class="col-xs-12 text-xs-center col-md-7 text-md-left">
       <p class="wrap">
         <h4>Name:</h4>
         {{resume.profile.first_name}} {{resume.profile.middle_names}} {{resume.profile.last_name}}<br>
@@ -20,7 +20,7 @@
       </p>
     </div>
        
-    <div class="col-xs-12 text-xs-center col-sm-12 text-sm-left">      
+    <div class="col-xs-12 text-xs-center col-md-12 text-md-left">      
       <p class="wrap">
         <h4>About me</h4><br>
         {{resume.profile.biography}}
