--- a/client/contact/contact.view.ng.html
+++ b/client/contact/contact.view.ng.html
@@ -1,29 +1,29 @@
-<div id="contact" class="contact container animated bounceInLeft">
+<div id="contact" class="contact container">
 	<h2>{{ viewName }}</h2>
 	<hr>
-	<blockquote>
+	<blockquote class="hidden-xs">
 		<p>Only love interests me, and I am only in contact with things that revolve around love.</p>
 		<footer>Marc Chagall</footer>
 	</blockquote>
 	
 	<div class="row">
-    	<div class="wrap col-xs-12 col-sm-6 list-item-unstyled">
+    	<div class="wrap col-xs-12 col-md-5 col-md-push-7 list-item-unstyled  animated bounceInLeft">
     		<h4>Additional Information</h4>
     		<ul class="list-group list-unstyled">
     			<li class="list-group-item">
-	    			<span class="fa-stack fa-lg">
-						<i class="fa fa-circle fa-stack-2x"></i>
-						<i class="fa fa-map-marker fa-stack-1x fa-inverse"></i>
-					</span>
-					&nbsp; {{resume.profile.current_location.street}} {{resume.profile.current_location.housenumber}} {{resume.profile.current_location.state}}, {{resume.profile.current_location.city}} - {{resume.profile.current_location.country}}
-				</li>
-				<li class="list-group-item">
 	    			<span class="fa-stack fa-lg">
 						<i class="fa fa-circle fa-stack-2x"></i>
 						<i class="fa fa-phone fa-stack-1x fa-inverse"></i>
 					</span>
 					&nbsp; {{resume.contact_details.phone}}
 				</li>
+    			<li class="list-group-item">
+	    			<span class="fa-stack fa-lg">
+						<i class="fa fa-circle fa-stack-2x"></i>
+						<i class="fa fa-linkedin fa-stack-1x fa-inverse"></i>
+					</span>
+					&nbsp; {{resume.contact_details.linkedin}}
+				</li>				
     			<li class="list-group-item">
 	    			<span class="fa-stack fa-lg">
 						<i class="fa fa-circle fa-stack-2x"></i>
@@ -40,7 +40,7 @@
 				</li>        
     		</ul>
     	</div>
-    	<div class="wrap col-xs-12 col-sm-6">
+    	<div class="wrap col-xs-12 col-md-7 col-md-pull-5  animated bounceInRight">
     		<h4>Drop me a line</h4>
     		<div class="contact-form-container" ng-controller="ContactCtrl">
 		        <div class="alert alert-danger" ng-show="error">
