Full working contact form

--- a/client/main/main.view.ng.html
+++ b/client/main/main.view.ng.html
@@ -1,10 +1,10 @@
-<div id="profile" class="profile animated bounceIn">
+<div id="profile" class="profile">
   <h2>Profile</h2>
-  <p class="lead">I'm a creative Web UI Developer</p>
+  <p class="lead">Creative Web UI Developer</p>
 
   <hr>
 
-  <div class="row">
+  <div class="row animated bounceIn">
     <div class="wrap col-xs-12 text-xs-center col-md-5 text-md-right">
       <img class="img-circle" src="gonzalozunino.png" alt="I'm Gonzalo Zunino" width="200" height="200">
     </div>
