--- a/client/contact/contact.view.ng.html
+++ b/client/contact/contact.view.ng.html
@@ -15,28 +15,28 @@
 						<i class="fa fa-circle fa-stack-2x"></i>
 						<i class="fa fa-phone fa-stack-1x fa-inverse"></i>
 					</span>
-					&nbsp; {{resume.contact_details.phone}}
+					&nbsp; {{contact.phone}}
 				</li>
     			<li class="list-group-item">
 	    			<span class="fa-stack fa-lg">
 						<i class="fa fa-circle fa-stack-2x"></i>
 						<i class="fa fa-linkedin fa-stack-1x fa-inverse"></i>
 					</span>
-					&nbsp; {{resume.contact_details.linkedin}}
+					&nbsp; {{contact.linkedin}}
 				</li>				
     			<li class="list-group-item">
 	    			<span class="fa-stack fa-lg">
 						<i class="fa fa-circle fa-stack-2x"></i>
 						<i class="fa fa-envelope-o fa-stack-1x fa-inverse"></i>
 					</span>
-					&nbsp; {{resume.contact_details.email}}
+					&nbsp; {{contact.email}}
 				</li>
     			<li class="list-group-item">
 	    			<span class="fa-stack fa-lg">
 						<i class="fa fa-circle fa-stack-2x"></i>
 						<i class="fa fa-skype fa-stack-1x fa-inverse"></i>
 					</span>
-					&nbsp; {{resume.contact_details.skype}}
+					&nbsp; {{contact.skype}}
 				</li>        
     		</ul>
     	</div>
