Change states to named views

--- a/client/experiences/experiences.view.ng.html
+++ b/client/experiences/experiences.view.ng.html
@@ -1,4 +1,4 @@
-<div id="experiences" class="experiences container animated bounceInLeft">
+<div id="experiences" class="experiences container">
 	<h2>{{ viewName }}</h2>
 	<blockquote>
 		<p>Experience without theory is blind, but theory without experience is mere intellectual play.</p>
