--- a/client/index.html
+++ b/client/index.html
@@ -1,9 +1,12 @@
 <head>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <base href="/">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<base href="/">
 </head>
 <body>
-  <toolbar></toolbar>  
-  <div class="container" ui-view=""></div>  
-  <footnote></footnote>
+	<toolbar></toolbar>
+	<div ui-view="main"></div>
+	<!-- <div ui-view="experiences"></div> -->
+	<!-- <div ui-view="abilities"></div> -->
+	<div ui-view="contact"></div>
+	<footnote></footnote>
 </body>
