--- a/client/main/main.view.ng.html
+++ b/client/main/main.view.ng.html
@@ -1,14 +1,11 @@
-<div id="profile" class="profile">
+<div id="profile" class="profile container">  
   <h2>Profile</h2>
   <p class="lead">Creative Web UI Developer</p>
-
   <hr>
-
   <div class="row animated bounceIn">
     <div class="wrap col-xs-12 text-xs-center col-md-5 text-md-right">
       <img class="img-circle" src="gonzalozunino.png" alt="I'm Gonzalo Zunino" width="200" height="200">
-    </div>
-    
+    </div>    
     <div class="col-xs-12 text-xs-center col-md-7 text-md-left">
       <p class="wrap">
         <h4>Name:</h4>
@@ -18,8 +15,7 @@
         <h4>Location:</h4>
         {{profile.current_location.state}}, {{profile.current_location.city}} - {{profile.current_location.country}}
       </p>
-    </div>
-       
+    </div>       
     <div class="col-xs-12 text-xs-center col-md-12 text-md-left">      
       <p class="wrap">
         <h4>About me</h4><br>
@@ -27,5 +23,4 @@
       </p>      
     </div>
   </div>
-
 </div>
