Single page scroll

--- a/client/main/main.view.ng.html
+++ b/client/main/main.view.ng.html
@@ -2,12 +2,12 @@
   <h2>Profile</h2>
   <p class="lead">Creative Web UI Developer</p>
   <hr>
-  <div class="row animated bounceIn">
-    <div class="wrap col-xs-12 text-xs-center col-md-5 text-md-right">
+  <div class="row">
+    <div class="col-xs-12 text-xs-center col-md-5 text-md-right">
       <img class="img-circle" src="gonzalozunino.png" alt="I'm Gonzalo Zunino" width="200" height="200">
     </div>    
     <div class="col-xs-12 text-xs-center col-md-7 text-md-left">
-      <p class="wrap">
+      <p>
         <h4>Name:</h4>
         {{profile.first_name}} {{profile.middle_names}} {{profile.last_name}}<br>
         <h4>Age:</h4>
@@ -17,7 +17,7 @@
       </p>
     </div>       
     <div class="col-xs-12 text-xs-center col-md-12 text-md-left">      
-      <p class="wrap">
+      <p>
         <h4>About me</h4><br>
         {{profile.biography}}
       </p>      
