--- a/client/contact/contact.view.ng.html
+++ b/client/contact/contact.view.ng.html
@@ -7,7 +7,7 @@
 	</blockquote>
 	
 	<div class="row">
-    	<div class="wrap col-xs-12 col-md-5 col-md-push-7 list-item-unstyled  animated bounceInLeft">
+    	<div class="col-xs-12 col-md-5 col-md-push-7 list-item-unstyled">
     		<h4>Additional Information</h4>
     		<ul class="list-group list-unstyled">
     			<li class="list-group-item">
@@ -40,7 +40,7 @@
 				</li>        
     		</ul>
     	</div>
-    	<div class="wrap col-xs-12 col-md-7 col-md-pull-5  animated bounceInRight">
+    	<div class="col-xs-12 col-md-7 col-md-pull-5">
     		<h4>Drop me a line</h4>
     		<div class="contact-form-container" ng-controller="ContactCtrl">
 		        <div class="alert alert-danger" ng-show="error">
@@ -69,6 +69,6 @@
 		            </button>
 		        </form>
 		    </div>		    
-    	</div>
+    	</div>    	
     </div>
 </div>
