--- a/client/index.html
+++ b/client/index.html
@@ -4,9 +4,12 @@
 </head>
 <body>
 	<toolbar></toolbar>
-	<div ui-view="main"></div>
-	<!-- <div ui-view="experiences"></div> -->
-	<!-- <div ui-view="abilities"></div> -->
-	<div ui-view="contact"></div>
+	<div class="container" ng-controller="MainCtrl">		
+		<div ui-view="main"></div>
+		<div ui-view="experiences"></div>
+		<div ui-view="abilities"></div>
+		<div ui-view="contact"></div>
+		<i class="fa fa-arrow-up fa-3x pull-right" ng-click="toTheTop()"></i>
+	</div>	
 	<footnote></footnote>
 </body>
