--- a/client/index.html
+++ b/client/index.html
@@ -9,7 +9,7 @@
 		<div ui-view="experiences"></div>
 		<div ui-view="abilities"></div>
 		<div ui-view="contact"></div>
-		<i class="fa fa-arrow-up fa-3x pull-right" ng-click="toTheTop()"></i>
+		<i class="fa fa-arrow-up fa-3x pull-right wow bounceInLeft" ng-click="toTheTop()"></i>
 	</div>	
 	<footnote></footnote>
 </body>
