--- a/client/contact/contact.view.ng.html
+++ b/client/contact/contact.view.ng.html
@@ -1,74 +1,75 @@
-<div id="contact" class="contact container">
-	<h2>{{ viewName }}</h2>
+<div class="contact container">
+	<h2 class="section-title text-xs-center">{{ viewName }}</h2>
 	<hr>
 	<blockquote class="hidden-xs">
 		<p>Only love interests me, and I am only in contact with things that revolve around love.</p>
 		<footer>Marc Chagall</footer>
 	</blockquote>
-	
-	<div class="row">
-    	<div class="col-xs-12 col-md-5 col-md-push-7 list-item-unstyled">
-    		<h4>Additional Information</h4>
-    		<ul class="list-group list-unstyled">
-    			<li class="list-group-item">
-	    			<span class="fa-stack fa-lg">
-						<i class="fa fa-circle fa-stack-2x"></i>
-						<i class="fa fa-phone fa-stack-1x fa-inverse"></i>
-					</span>
-					&nbsp; {{contact.phone}}
-				</li>
-    			<li class="list-group-item">
-	    			<span class="fa-stack fa-lg">
-						<i class="fa fa-circle fa-stack-2x"></i>
-						<i class="fa fa-linkedin fa-stack-1x fa-inverse"></i>
-					</span>
-					&nbsp; {{contact.linkedin}}
-				</li>				
-    			<li class="list-group-item">
-	    			<span class="fa-stack fa-lg">
-						<i class="fa fa-circle fa-stack-2x"></i>
-						<i class="fa fa-envelope-o fa-stack-1x fa-inverse"></i>
-					</span>
-					&nbsp; {{contact.email}}
-				</li>
-    			<li class="list-group-item">
-	    			<span class="fa-stack fa-lg">
-						<i class="fa fa-circle fa-stack-2x"></i>
-						<i class="fa fa-skype fa-stack-1x fa-inverse"></i>
-					</span>
-					&nbsp; {{contact.skype}}
-				</li>        
-    		</ul>
-    	</div>
-    	<div class="col-xs-12 col-md-7 col-md-pull-5">
-    		<h4>Drop me a line</h4>
-    		<div class="contact-form-container" ng-controller="ContactCtrl">
-		        <div class="alert alert-danger" ng-show="error">
-		            <button class="close" data-dismiss="alert">x</button>
-		            <strong>Error!</strong> An error occured while trying to send message.
-		        </div>
-		        <div class="alert alert-success" ng-show="success">
-		            <button class="close" data-dismiss="alert">x</button>
-		            <strong>Success! </strong> Your message was successfully sent.
-		        </div>        
-		        <form name="contactForm" novalidate="" class="contact-form">
-		            <div class="form-group" ng-class="{ 'has-error' : contactForm.name.$invalid && !contactForm.name.$pristine }">
-		                <input class="form-control" type="text" name="name" required="required" placeholder="YOUR NAME" ng-model="contactName">
-		                <p class="help-block" ng-show="contactForm.name.$invalid && !contactForm.name.$pristine">Your name is required.</p>
-		            </div>
-		            <div class="form-group" ng-class="{ 'has-error' : contactForm.email.$invalid && !contactForm.email.$pristine }">
-		                <input class="form-control" type="email" name="email" required="required" placeholder="E-MAIL" ng-model="contactEmail">
-		                <p  class="help-block" ng-show="contactForm.email.$invalid && !contactForm.email.$pristine">Invalid email.</p>
-		            </div>
-		            <div class="form-group" ng-class="{ 'has-error' : contactForm.message.$invalid && !contactForm.message.$pristine }">
-		                <textarea class="form-control msg" rows="5" name="message" required="required" placeholder="YOUR MESSAGE ..." ng-model="contactMsg" ></textarea>
-		                <p class="help-block" ng-show="contactForm.message.$error.required && !contactForm.message.$pristine">You must leave a cool messsage.</p>
-		            </div>
-		            <button class="btn btn-default btn-lg btn-block" ng-click="send()" ng-disabled="contactForm.$invalid">
-		                Send
-		            </button>
-		        </form>
-		    </div>		    
-    	</div>    	
-    </div>
+	<div class="container">
+		<div class="row">
+	    	<div class="col-xs-12 col-md-5 col-md-push-7 list-item-unstyled wow bounceInLeft">
+	    		<h4>Additional Information</h4>
+	    		<ul class="list-group list-unstyled">
+	    			<li class="list-group-item">
+		    			<span class="fa-stack fa-lg">
+							<i class="fa fa-circle fa-stack-2x"></i>
+							<i class="fa fa-phone fa-stack-1x fa-inverse"></i>
+						</span>
+						&nbsp; {{contact.phone}}
+					</li>
+	    			<li class="list-group-item">
+		    			<span class="fa-stack fa-lg">
+							<i class="fa fa-circle fa-stack-2x"></i>
+							<i class="fa fa-linkedin fa-stack-1x fa-inverse"></i>
+						</span>
+						&nbsp; {{contact.linkedin}}
+					</li>				
+	    			<li class="list-group-item">
+		    			<span class="fa-stack fa-lg">
+							<i class="fa fa-circle fa-stack-2x"></i>
+							<i class="fa fa-envelope-o fa-stack-1x fa-inverse"></i>
+						</span>
+						&nbsp; {{contact.email}}
+					</li>
+	    			<li class="list-group-item">
+		    			<span class="fa-stack fa-lg">
+							<i class="fa fa-circle fa-stack-2x"></i>
+							<i class="fa fa-skype fa-stack-1x fa-inverse"></i>
+						</span>
+						&nbsp; {{contact.skype}}
+					</li>        
+	    		</ul>
+	    	</div>
+	    	<div class="col-xs-12 col-md-7 col-md-pull-5 wow bounceInRight">
+	    		<h4>Drop me a line</h4>
+	    		<div class="contact-form-container" ng-controller="ContactCtrl">
+			        <div class="alert alert-danger" ng-show="error">
+			            <button class="close" data-dismiss="alert">x</button>
+			            <strong>Error!</strong> An error occured while trying to send message.
+			        </div>
+			        <div class="alert alert-success" ng-show="success">
+			            <button class="close" data-dismiss="alert">x</button>
+			            <strong>Success! </strong> Your message was successfully sent.
+			        </div>        
+			        <form name="contactForm" novalidate="" class="contact-form">
+			            <div class="form-group" ng-class="{ 'has-error' : contactForm.name.$invalid && !contactForm.name.$pristine }">
+			                <input class="form-control" type="text" name="name" required="required" placeholder="YOUR NAME" ng-model="contactName">
+			                <p class="help-block" ng-show="contactForm.name.$invalid && !contactForm.name.$pristine">Your name is required.</p>
+			            </div>
+			            <div class="form-group" ng-class="{ 'has-error' : contactForm.email.$invalid && !contactForm.email.$pristine }">
+			                <input class="form-control" type="email" name="email" required="required" placeholder="E-MAIL" ng-model="contactEmail">
+			                <p  class="help-block" ng-show="contactForm.email.$invalid && !contactForm.email.$pristine">Invalid email.</p>
+			            </div>
+			            <div class="form-group" ng-class="{ 'has-error' : contactForm.message.$invalid && !contactForm.message.$pristine }">
+			                <textarea class="form-control msg" rows="5" name="message" required="required" placeholder="YOUR MESSAGE ..." ng-model="contactMsg" ></textarea>
+			                <p class="help-block" ng-show="contactForm.message.$error.required && !contactForm.message.$pristine">You must leave a cool messsage.</p>
+			            </div>
+			            <button class="btn btn-primary btn-lg btn-block" ng-click="send()" ng-disabled="contactForm.$invalid">
+			                Send
+			            </button>
+			        </form>
+			    </div>		    
+	    	</div>
+	    </div>    	
+    </div>    
 </div>
