--- a/client/contact/contact.view.ng.html
+++ b/client/contact/contact.view.ng.html
@@ -6,8 +6,8 @@
 		<footer>Marc Chagall</footer>
 	</blockquote>
 	<div class="container">
-		<div class="row">
-	    	<div class="col-xs-12 col-md-5 col-md-push-7 list-item-unstyled wow bounceInLeft">
+		<div class="row wow pulse">
+	    	<div class="col-xs-12 col-md-5 col-md-push-7 list-item-unstyled">
 	    		<h4>Additional Information</h4>
 	    		<ul class="list-group list-unstyled">
 	    			<li class="list-group-item">
@@ -40,7 +40,7 @@
 					</li>        
 	    		</ul>
 	    	</div>
-	    	<div class="col-xs-12 col-md-7 col-md-pull-5 wow bounceInRight">
+	    	<div class="col-xs-12 col-md-7 col-md-pull-5 wow pulse">
 	    		<h4>Drop me a line</h4>
 	    		<div class="contact-form-container" ng-controller="ContactCtrl">
 			        <div class="alert alert-danger" ng-show="error">
