Removing animations and fixing responsive behaviour

--- a/client/abilities/abilities.view.ng.html
+++ b/client/abilities/abilities.view.ng.html
@@ -8,7 +8,7 @@
 	<hr>
 
 	<h3 class="text-center">Skills</h3>
-	<div class="row container wow fadeInUp" ng-repeat="skill in skills">
+	<div class="row container" ng-repeat="skill in skills">
 		<div class="col-xs-6 text-xs-right col-md-6 text-md-right ability-title">
 			<div>{{skill.title}}</div>		
 		</div>
@@ -18,7 +18,7 @@
 	</div>
 	
 	<h3 class="text-center">Languages</h3>
-	<div class="row container wow fadeInUp" ng-repeat="language in languages">
+	<div class="row container" ng-repeat="language in languages">
 		<div class="col-xs-6 text-xs-right col-md-6 text-md-right ability-title">
 			<div>{{language.title}} ({{language.endorsement}})</div>		
 		</div>
