--- a/client/experiences/experiences.view.ng.html
+++ b/client/experiences/experiences.view.ng.html
@@ -8,7 +8,7 @@
 	<hr>
 
 	<h3 class="text-center">Career</h3>
-	<div class="row container wow fadeInUp" ng-repeat="exp in careers">
+	<div class="row container" ng-repeat="exp in careers">
 		<div class="col-xs-12 col-md-4">
 			<h4>{{exp.title}}</h4>
 			<p>
@@ -30,7 +30,7 @@
 	</div>
 
 	<h3 class="text-center">Education</h3>
-	<div class="row container wow fadeInUp" ng-repeat="edu in educations">
+	<div class="row container" ng-repeat="edu in educations">
 		<div class="col-xs-12 col-md-4">
 			<h4>{{edu.title}}</h4>			
 		</div>
