--- a/client/main/main.view.ng.html
+++ b/client/main/main.view.ng.html
@@ -7,10 +7,10 @@
 
   <hr>  
   <div class="row container">
-    <div class="col-xs-12 text-xs-center col-md-5 text-md-right wow fadeInUp">
+    <div class="col-xs-12 text-xs-center col-md-5 text-md-right">
       <img class="img-circle" src="gonzalozunino.png" alt="I'm Gonzalo Zunino" width="200" height="200">
     </div>    
-    <div class="col-xs-12 col-md-7 wow fadeInUp">
+    <div class="col-xs-12 col-md-7">
       <p>
         <h4>Name:</h4>
         {{profile.first_name}} {{profile.middle_names}} {{profile.last_name}}<br>
@@ -20,7 +20,7 @@
         {{profile.current_location.state}}, {{profile.current_location.city}} - {{profile.current_location.country}}
       </p>
     </div>       
-    <div class="col-xs-12 col-md-12 wow fadeInUp">
+    <div class="col-xs-12 col-md-12">
       <p>      
         {{profile.biography}}
       </p>
